# parapart

./: README.md  control-parser.js  controls.js  index.html  openscad-worker.js  parapart.schema  parapart.sqlite3  styles.css
database/: parapart.schema  parapart.sqlite3
docs/: .gitattributes  CNAME  add-part.js  control-parser.js  controls.js  db.base64  embed.html  features.js  filesystem.js  gallery.js  index.html  log.js  main.js  openscad-runner.js  openscad-worker-expanded.js  openscad-worker-inlined.js  output.css  parapart.sqlite3  parapart_styles.css  serve.py  state.js  style_base.css  styles.css  tailwind.config.js
docs/assets/section_images/: build_label.sh
docs/libraries/: stuff
docs/local_scad/: .scad  part1.scad  part10.scad  part100.scad  part101.scad  part11.scad  part12.scad  part13.scad  part14.scad  part15.scad  part16.scad  part17.scad  part18.scad  part19.scad  part2.scad  part20.scad  part21.scad  part22.scad  part23.scad  part24.scad  part25.scad  part26.scad  part27.scad  part28.scad  part29.scad  part3.scad  part30.scad  part31.scad  part32.scad  part33.scad  part34.scad  part35.scad  part36.scad  part37.scad  part38.scad  part39.scad  part4.scad  part40.scad  part41.scad  part42.scad  (+62 more)
docs/local_scad/000/: 001.scad  002.scad  003.scad  004.scad  005.scad  006.scad  (+93 more)
docs/openscad/: openscad.wasm.js
docs/stlview/: load_stl.js  readme.txt  stl_viewer.js
openscad_color_scheme/render/: parapart.json
parapart_processor/: .gitignore  Cargo.toml  github_token.txt  issue_check.sh
parapart_processor/src/: main.rs
parts/001/: test2.scad
(+447 files in other folders)
