[package]
name = "parapart_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
octocrab = "0.18.1"
regex = "1.7.1"
reqwest = "0.11.13"
rusqlite = "0.28.0"
tempfile = "3.3.0"

tokio = { version = "1.24.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
